# stylus

./: .clinerules  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-build.yml  release.yml
docs/: index.md  release-setup.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
stylus/: __init__.py
stylus/agents/: __init__.py
stylus/core/: __init__.py
stylus/schemas/: __init__.py
tests/: conftest.py  test_package.py
